--- a/app/src/main/res/layout/activity_category_list.xml
+++ b/app/src/main/res/layout/activity_category_list.xml
@@ -34,13 +34,13 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:onClick="sortClicked"
         android:layout_width="40dp"
         android:layout_height="40dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/ic_baseline_sort_24"
-        app:layout_constraintTop_toTopOf="parent"
+        android:onClick="sortClicked"
         app:layout_constraintRight_toLeftOf="@id/addBtn"
-        android:layout_marginTop="20dp"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <View
         android:id="@+id/darkView_view"
@@ -56,28 +56,19 @@
 
     <SearchView
         android:id="@+id/search_view"
-        android:queryHint="@string/search"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:queryHint="@string/search"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/darkView_view"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/darkView_view" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@id/sort_textview"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/search_view" />
-
-    <TextView
-        android:id="@+id/sort_textview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:text="Title ASC"
-        android:layout_margin="5dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
