--- a/app/src/main/res/layout/activity_notes_list.xml
+++ b/app/src/main/res/layout/activity_notes_list.xml
@@ -40,6 +40,15 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@id/backBtn" />
 
+    <Button
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:background="@drawable/ic_baseline_sort_24"
+        android:onClick="sortClicked"
+        android:layout_marginTop="5dp"
+        app:layout_constraintRight_toLeftOf="@id/edit_btn"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <View
         android:id="@+id/darkView_view"
         android:layout_width="match_parent"
