--- a/app/src/main/res/layout/activity_move_to.xml
+++ b/app/src/main/res/layout/activity_move_to.xml
@@ -15,6 +15,7 @@
         android:background="@android:color/transparent"
         android:textColor="@color/colorAccent"
         android:text="Cancel"
+        android:onClick="cancelClicked"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@id/move_to_btn"
         app:layout_constraintBottom_toBottomOf="@id/move_to_btn"/>
