--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -16,16 +16,29 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_margin="10dp"
+        android:background="@drawable/rounded_corners"
         android:padding="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:background="@drawable/rounded_corners">
+        app:layout_constraintRight_toRightOf="parent">
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:onClick="navigateClicked"
-            android:background="@drawable/ic_baseline_navigation_24" />
+            android:background="@drawable/ic_baseline_navigation_24"
+            android:onClick="navigateClicked" />
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <ToggleButton
+        android:id="@+id/toggleButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:onClick="modeClicked"
+        android:background="@drawable/rounded_corners_1"
+        android:text="ToggleButton"
+        android:textOff="Driving"
+        android:textOn="Walking"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
