--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#DBBC5F</color>
     <color name="colorAccent">#DBBC5F</color>
     <color name="lightgrey">#eeeeee</color>
-    <color name="red">#FF0000</color>>
+    <color name="red">#FF0000</color>
     <color name="green">#009600</color>
     <color name="translucent_white">#CCffffff</color>>
 </resources>
