--- a/app/src/main/res/layout/notes_list_item.xml
+++ b/app/src/main/res/layout/notes_list_item.xml
@@ -11,6 +11,7 @@
         android:id="@+id/notes_list_image"
         android:layout_width="50dp"
         android:layout_height="50dp"
+        android:src="@drawable/ic_baseline_note_24"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
